[gd_scene load_steps=3 format=3 uid="uid://dwg3af0d812c2"]

[ext_resource type="Script" path="res://scenes/scripts/modulation_entry.gd" id="1_co5mi"]
[ext_resource type="Texture2D" uid="uid://dn3hple5p0a7q" path="res://ui_art/icon_delete.png" id="2_758mh"]

[node name="ModulationEntry" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_co5mi")

[node name="SourceOption" type="OptionButton" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
selected = 0
item_count = 12
popup/item_0/text = "Oscillator 1"
popup/item_1/text = "Oscillator 2"
popup/item_1/id = 1
popup/item_2/text = "Oscillator 3"
popup/item_2/id = 2
popup/item_3/text = "Oscillator 4"
popup/item_3/id = 3
popup/item_4/text = "Oscillator 5"
popup/item_4/id = 4
popup/item_5/text = "LFO 1"
popup/item_5/id = 5
popup/item_6/text = "LFO 2"
popup/item_6/id = 6
popup/item_7/text = "LFO 3"
popup/item_7/id = 7
popup/item_8/text = "LFO 4"
popup/item_8/id = 8
popup/item_9/text = "Envelope 1"
popup/item_9/id = 9
popup/item_10/text = "Envelope 2"
popup/item_10/id = 10
popup/item_11/text = "Envelope 3"
popup/item_11/id = 11

[node name="DestinationOption" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
selected = 0
item_count = 13
popup/item_0/text = "Oscillator 1"
popup/item_1/text = "Oscillator 2"
popup/item_1/id = 1
popup/item_2/text = "Oscillator 3"
popup/item_2/id = 2
popup/item_3/text = "Oscillator 4"
popup/item_3/id = 3
popup/item_4/text = "Oscillator 5"
popup/item_4/id = 4
popup/item_5/text = "LFO 1"
popup/item_5/id = 5
popup/item_6/text = "LFO 2"
popup/item_6/id = 6
popup/item_7/text = "LFO 3"
popup/item_7/id = 7
popup/item_8/text = "LFO 4"
popup/item_8/id = 8
popup/item_9/text = "Envelope 1"
popup/item_9/id = 9
popup/item_10/text = "Envelope 2"
popup/item_10/id = 10
popup/item_11/text = "Envelope 3"
popup/item_11/id = 11
popup/item_12/text = "Envelope 4"
popup/item_12/id = 12

[node name="DestinationParameterOption" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_758mh")

[connection signal="item_selected" from="SourceOption" to="." method="_on_source_option_item_selected"]
[connection signal="item_selected" from="DestinationOption" to="." method="_on_destination_option_item_selected"]
[connection signal="item_selected" from="DestinationParameterOption" to="." method="_on_destination_parameter_option_item_selected"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
